// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render correctly if enabled 1`] = `
<_default
  checked={true}
  disabled={false}
  label="label"
  onClick={[MockFunction]}
>
  <styled__CheckboxWrapper>
    <div
      className="styled__CheckboxWrapper-sc-1sf4nv3-1 kdBfUE"
    >
      <styled__CheckboxElem
        checked={true}
        label="label"
        onClick={[MockFunction]}
      >
        <div
          checked={true}
          className="styled__CheckboxElem-sc-1sf4nv3-2 cxsapr"
          label="label"
          onClick={[MockFunction]}
        >
          <span />
        </div>
      </styled__CheckboxElem>
      <styled__Label
        onClick={[MockFunction]}
      >
        <label
          className="styled__Label-sc-1sf4nv3-3 NmbMZ"
          onClick={[MockFunction]}
        >
          label
        </label>
      </styled__Label>
    </div>
  </styled__CheckboxWrapper>
</_default>
`;

exports[`<Checkbox /> should render correctly if enabled without label and check 1`] = `
<_default
  disabled={false}
  onClick={[MockFunction]}
>
  <styled__CheckboxWrapper>
    <div
      className="styled__CheckboxWrapper-sc-1sf4nv3-1 kdBfUE"
    >
      <styled__CheckboxElem
        onClick={[MockFunction]}
      >
        <div
          className="styled__CheckboxElem-sc-1sf4nv3-2 efVoBK"
          onClick={[MockFunction]}
        >
          <span />
        </div>
      </styled__CheckboxElem>
    </div>
  </styled__CheckboxWrapper>
</_default>
`;

exports[`<Checkbox /> should render correctly with tooltip 1`] = `
<_default
  disabled={true}
  id="0"
  onClick={[MockFunction]}
  tooltipMessage="Tooltip"
>
  <_default
    id="0"
    place="right"
    style={
      Object {
        "width": "100%",
      }
    }
    value="Tooltip"
  >
    <styled__Wrapper
      data-for="0"
      data-tip="Tooltip"
      id="0"
      place="right"
      style={
        Object {
          "width": "100%",
        }
      }
      value="Tooltip"
    >
      <div
        className="styled__Wrapper-funpqb-0 cznzQQ"
        data-for="0"
        data-tip="Tooltip"
        id="0"
        style={
          Object {
            "width": "100%",
          }
        }
        value="Tooltip"
      >
        <styled__DisabledWrapper
          onClick={[MockFunction]}
        >
          <div
            className="styled__DisabledWrapper-sc-1sf4nv3-0 vdKVP"
            onClick={[MockFunction]}
          />
        </styled__DisabledWrapper>
        <styled__TooltipWrapper
          display="true"
        >
          <div
            className="styled__TooltipWrapper-funpqb-1 gQtIVd"
            display="true"
          >
            <ReactTooltip
              clickable={false}
              delayShow={300}
              effect="solid"
              getContent={[Function]}
              html={true}
              id="0"
              insecure={true}
              multiline={true}
              place="right"
              resizeHide={true}
              type="dark"
              wrapper="div"
            >
              <div
                className="__react_component_tooltip place-right type-dark"
                data-id="tooltip"
                id="0"
              >
                null
              </div>
            </ReactTooltip>
          </div>
        </styled__TooltipWrapper>
      </div>
    </styled__Wrapper>
  </_default>
</_default>
`;

exports[`<Checkbox /> should render correctly without tooltip 1`] = `
<_default
  disabled={true}
  onClick={[MockFunction]}
>
  <styled__DisabledWrapper>
    <div
      className="styled__DisabledWrapper-sc-1sf4nv3-0 vdKVP"
    />
  </styled__DisabledWrapper>
</_default>
`;
